--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,15 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="navbar">
+    </div>
+
+    <div class= "header">
+      <h1><%= @studies.first.title %></h1>
+    </div>
+
+    <div class ="main">
+      <%= yield %>
+    </div>
   </body>
 </html>
