--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,12 +14,10 @@
     <div class="navbar">
     </div>
 
-    <div class= "header">
-      <h1><%= @studies.first.title %></h1>
-    </div>
-
     <div class ="main">
       <%= yield %>
+    </div>
+    <div class="footer">
     </div>
   </body>
 </html>
