define nesteed route study_point_path(study_id, point_id)

--- a/app/views/studies/index.html.erb
+++ b/app/views/studies/index.html.erb
@@ -1,6 +1,7 @@
 <% @studies.each do |study| %>
   <% study.outline[:subtitles].each do |subtitle, points| %>
-    <h3><%= subtitle %></h3>
+    <ol>
+    <li><h3><%= subtitle %></h3></li>
     <div class= "point">
     <ul>
       <% points.each do  |point| %>
@@ -11,6 +12,7 @@
       <% end %>
     </ul>
     </div>
+    </ol>
   <% end %>
   
 <% end %>
