--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,31 @@
 
     <div class ="main">
       <%= yield %>
+      <%= javascript_pack_tag "hide" %>
     </div>
     <div class="footer">
     </div>
+
+    <script>      
+      function myFunction() {
+        var x = document.getElementById("active");
+        if (x.style.display === "none") {
+          x.style.display = "block";
+        } else {
+          x.style.display = "none";
+        }
+        }
+
+        function activateBox(box_id) {
+          var x = document.getElementById(box_id);
+          if (x.style.display === "none") {
+            x.style.display = "block";
+          } else {
+            x.style.display = "none";
+          }
+          }
+      
+    </script>
+
   </body>
 </html>
