--- a/app/views/studies/index.html.erb
+++ b/app/views/studies/index.html.erb
@@ -14,6 +14,11 @@
     </div>
     </ol>
   <% end %>
-  
 <% end %>
 
+<button onclick="myFunction()"> Activate </button>
+<div class="active-box" id="hide_this"> 
+  <h1>I am active</h1>
+</div>
+
+<a href="#" id="hide_this" class="error">Click To Hide Me</a>
