fully functional studies/show view; subtitles hash with values of an empty array do not cause errors

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -89,9 +89,9 @@
   }
 
 /* Apply the below style later in the development */
-  /* ol.points-list {
+  ol.points-list {
     list-style-type: upper-alpha;
-  } */
+  }
 
 
 #show-view {
