--- a/app/views/studies/index.html.erb
+++ b/app/views/studies/index.html.erb
@@ -1,65 +1,8 @@
 <% @studies.each do |study| %>
-  <% study.outline[:subtitles].each do |subtitle, points| %>
-    <ol>
-    <li><h3><%= subtitle %></h3></li>
-    <div class= "point">
-    <ul>
-      <% points.each do  |point| %>
-        <li>
-        <%= point %>
-        </li>
-       
-      <% end %>
-    </ul>
-    </div>
-    </ol>
-  <% end %>
+  <%= link_to study.title, study_path(study) %> 
+
 <% end %>
 
-<button onclick="myFunction()"> Activate </button>
-<div class="active-box" id="hide_this"> 
-  <h1>I am active</h1>
-</div>
-
-<a href="#" id="hide_this" class="error">Click To Hide Me</a>
 
 
 
-El Inicio de la Gran Tribulación
-Los juicios de los primeros cuatro sellos (Ap. 6:1-8)
-El juicio del caballo blanco, diplomacia y autoritarismo (6:1,2)
-El juicio del caballo bermejo, guerras y conflictos (6:3,4)
-El juicio del caballo negro,, hambre y escasez (6:5,6)
-El juicio del caballo amarillo, muerte y condenación (6:7,8)
-Los escogidos de dios son sellados (Ap. 7:1-8)
-Protección divina en medio de la tribulación (7:1-3)
-Identidad de los que son sellados (7:4-8)
-Una gran multitud de redimidos (Ap. 6:9-11, 7:9-17)
-Los primeros mártires de la tribulación (6:9-11)
-Se completa el número de los mártires (7:9-17)
-
-El Inicio de la Gran Tribulación
-Los juicios de los primeros cuatro sellos (Ap. 6:1-8)
-El juicio del caballo blanco, diplomacia y autoritarismo (6:1,2)
-El juicio del caballo bermejo, guerras y conflictos (6:3,4)
-El juicio del caballo negro,, hambre y escasez (6:5,6)
-El juicio del caballo amarillo, muerte y condenación (6:7,8)
-Los escogidos de dios son sellados (Ap. 7:1-8)
-Protección divina en medio de la tribulación (7:1-3)
-Identidad de los que son sellados (7:4-8)
-Una gran multitud de redimidos (Ap. 6:9-11, 7:9-17)
-Los primeros mártires de la tribulación (6:9-11)
-Se completa el número de los mártires (7:9-17)
-
-El Inicio de la Gran Tribulación
-Los juicios de los primeros cuatro sellos (Ap. 6:1-8)
-El juicio del caballo blanco, diplomacia y autoritarismo (6:1,2)
-El juicio del caballo bermejo, guerras y conflictos (6:3,4)
-El juicio del caballo negro,, hambre y escasez (6:5,6)
-El juicio del caballo amarillo, muerte y condenación (6:7,8)
-Los escogidos de dios son sellados (Ap. 7:1-8)
-Protección divina en medio de la tribulación (7:1-3)
-Identidad de los que son sellados (7:4-8)
-Una gran multitud de redimidos (Ap. 6:9-11, 7:9-17)
-Los primeros mártires de la tribulación (6:9-11)
-Se completa el número de los mártires (7:9-17)
