testing Javascript function to add points textfields dynamically

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -107,8 +107,8 @@ display: none;
 }
 
 button {
-background: none;
-border: none;
+/* background: none;
+border: none; */
 cursor: pointer;
 text-decoration: underline;
 color: brown;
