--- a/app/views/studies/show.html.erb
+++ b/app/views/studies/show.html.erb
@@ -30,4 +30,6 @@
     </ol>
   </div>
             
+
+<%= link_to 'Delete Study', @study, method: :delete, data: { confirm: 'Are you sure?' } %>
 </section>
