--- a/app/views/studies/new_refactor.html.erb
+++ b/app/views/studies/new_refactor.html.erb
@@ -23,8 +23,9 @@
     <%= f.fields_for :subtitles do |sub| %>
       <li>
         <div class="sub-div" id="<%= sub.index %>">
-          <%= sub.label 'Subtitle' %>
+          <%= sub.label 'Subtitle' %> 
           <%= sub.text_field :name %>
+          <button onclick="addPoint(<%= sub.index %>)">Add point</button>
         </div><br>
         <ul id="new-study-ul-list">
           <%= sub.fields_for :points do |point| %>
@@ -32,6 +33,7 @@
               <div class="point-div" id="<%= sub.index %>.<%= point.index %>">
                 <%= point.label 'Point' %>
                 <%= point.text_field :name %>
+                <button onclick="activateBox(<%= point.index %>)">Hide point</button>
               </div><br><br>
               <%= point.fields_for :notes do |note| %>
                 <div class="note-div" id="<%= sub.index %>.<%= point.index %>.<%= note.index %>">
