add message to addPoint Javascript function when max number of subtitles is reached.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -64,6 +64,11 @@
             div.appendChild(label);
             div.appendChild(input);
           }
+          else {
+            let div = document.querySelector(`div.msg`);
+            div.innerHTML = "Each subtitle can have a maximum of 3 points.";
+
+          }
         }
 
 
