users can add points to a subtitle dynamically when creating a study

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -59,7 +59,7 @@ body {
   grid-area: main;
   border: 5px pink solid;
   padding: 1rem 1rem 0 1rem;
-  overflow:scroll;
+  /* overflow: scroll; */
 }
 
 ul {
