--- a/app/views/studies/index.html.erb
+++ b/app/views/studies/index.html.erb
@@ -1,9 +1,5 @@
 <% @studies.each do |study| %>
-  <%= link_to study.title, study_path(study) %> 
-
+  <%= link_to study.title, study_path(study) %><br>
 <% end %>
 
-
-
-<h1></h1>
 
